# atividade-prin

./: .pdm-python  db.sqlite3  pyproject.toml
biblioteca/: admin.py  models.py  serializers.py  views.py
biblioteca/migrations/: 0001_initial.py  0002_emprestimos_datadevolucao_emprestimos_dataemprestimo.py  0003_alter_alunos_matricula_alter_livros_ano.py  0004_rename_alunos_aluno_rename_emprestimos_emprestimo_and_more.py
config/: settings.py  urls.py
